# t-alpha

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile
backend/src/t_alpha/: config.py  services_market.py
backend/tests/: conftest.py  test_admin_api.py  test_backtest_engine.py  test_config.py  test_email_sender.py  test_main_app.py  test_market_api.py  test_market_data.py  test_market_service.py  test_scheduler.py  test_strategy_api.py  test_t0_engine_v1.py  test_t0_optimizer.py  test_t0_rules.py
deploy/: init_mysql.sql  pull_start.sh  restart.sh
docs/: admin_console_usage.md  amazingdata_sdk_install.md  amazingdata_trading_system_design.md  api_integration.md  linux_docker_deployment.md  t0_strategy_usage_guide.md
docs/superpowers/plans/: 2026-06-11-amazingdata-trading-system.md  2026-06-12-china-pingan-t0-strategy-v1.md  2026-06-18-vue3-admin-console.md
docs/superpowers/specs/: 2026-06-12-t0-strategy-v1-supplement-design.md  2026-06-18-vue3-admin-console-design.md
src/t_alpha/: cli.py  config.py  constants.py  main.py  services_market.py  services_strategy.py
src/t_alpha/api/: auth.py  deps.py  routes_auth.py  routes_market.py  routes_strategy.py  (+1 more)
tests/: test_auth_api.py  test_calendar.py  test_config.py  test_email_sender.py  test_indicators.py  test_market_api.py  test_market_data.py  test_scheduler.py  test_storage.py  test_strategy_service.py  test_t0_models.py  test_t0_strategy.py
web-admin/: index.html  package-lock.json  package.json  tsconfig.json
web-admin/src/: main.ts
(+46 files in other folders)
