[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t-alpha"
version = "0.1.0"
description = "AmazingData-backed market API and T+0 alert service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "pandas>=2.2",
  "numpy>=1.26",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-mock>=3.14",
  "httpx>=0.27",
]

[project.scripts]
t-alpha-api = "t_alpha.cli:run_api"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
